<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <!-- Project from https://start.vaadin.com/project/25bb864a-5cfc-4bcc-8a0c-1abc5ff20bd8 -->
  <groupId>life.qbic</groupId>
  <artifactId>datamanager</artifactId>
  <name>Data Manager</name>
  <version>0.10.0</version>
  <modules>
    <module>vaadinfrontend</module>
    <module>authentication</module>
    <module>authorization</module>
    <module>broadcasting</module>
    <module>newshandler</module>
    <module>mariadb-connector</module>
    <module>commons</module>
    <module>logging</module>
    <module>subscription-provider</module>
    <module>subscription-api</module>
    <module>finances</module>
    <module>projectmanagement</module>
  </modules>
  <packaging>pom</packaging>

  <properties>
    <java.version>17</java.version>
    <vaadin.version>23.3.0</vaadin.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.7.6</version>
  </parent>

  <repositories>
    <!-- The order of definitions matters. Explicitly defining central here to make sure it has the highest priority. -->
    <!-- Main Maven repository -->
    <repository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>vaadin-prereleases</id>
      <url>
        https://maven.vaadin.com/vaadin-prereleases/
      </url>
    </repository>
    <!-- Repository used by many Vaadin add-ons -->
    <repository>
      <id>Vaadin Directory</id>
      <url>https://maven.vaadin.com/vaadin-addons</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>nexus-snapshots</id>
      <name>QBiC Snapshots</name>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <checksumPolicy>fail</checksumPolicy>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </snapshots>
      <url>https://qbic-repo.qbic.uni-tuebingen.de/repository/maven-snapshots</url>
    </repository>
    <repository>
      <id>nexus-releases</id>
      <name>QBiC Releases</name>
      <releases>
        <checksumPolicy>fail</checksumPolicy>
        <enabled>true</enabled>
        <updatePolicy>always</updatePolicy>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>https://qbic-repo.qbic.uni-tuebingen.de/repository/maven-releases</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <!-- The order of definitions matters. Explicitly defining central here to make sure it has the highest priority. -->
    <pluginRepository>
      <id>central</id>
      <url>https://repo.maven.apache.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
    <pluginRepository>
      <id>vaadin-prereleases</id>
      <url>
        https://maven.vaadin.com/vaadin-prereleases/
      </url>
    </pluginRepository>
  </pluginRepositories>
  <distributionManagement>
    <repository>
      <uniqueVersion>true</uniqueVersion>
      <id>nexus-releases</id>
      <name>QBiC Releases</name>
      <url>https://qbic-repo.qbic.uni-tuebingen.de/repository/maven-releases</url>
    </repository>
    <snapshotRepository>
      <uniqueVersion>false</uniqueVersion>
      <id>nexus-snapshots</id>
      <name>QBiC Snapshots</name>
      <url>https://qbic-repo.qbic.uni-tuebingen.de/repository/maven-snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.spockframework</groupId>
        <artifactId>spock-core</artifactId>
        <version>2.2-M3-groovy-4.0</version>
        <scope>test</scope>
      </dependency>
      <!--If not specified, the 2.7.6 spring-boot-starter-parent dependency will introduce transitively the 1.30 version of snakeyaml, for which a multitude of security concerns are reported
      See https://mvnrepository.com/artifact/org.yaml/snakeyaml/1.30 for details. -->
      <dependency>
        <groupId>org.yaml</groupId>
        <artifactId>snakeyaml</artifactId>
        <version>1.33</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.gmavenplus</groupId>
        <artifactId>gmavenplus-plugin</artifactId>
        <version>1.13.1</version>
        <executions>
          <execution>
            <id>default</id>
            <goals>
              <goal>addSources</goal>
              <goal>addTestSources</goal>
              <goal>generateStubs</goal>
              <goal>compile</goal>
              <goal>generateTestStubs</goal>
              <goal>compileTests</goal>
              <goal>removeStubs</goal>
              <goal>removeTestStubs</goal>
            </goals>
          </execution>
          <execution>
            <id>site</id>
            <phase>site</phase>
            <goals>
              <goal>generateStubs</goal>
              <goal>generateTestStubs</goal>
              <goal>groovydoc</goal>
              <goal>groovydocTests</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <groovyDocOutputDirectory>${project.build.directory}/site/gapidocs
          </groovyDocOutputDirectory>
          <testGroovyDocOutputDirectory>${project.build.directory}/site/testgapidocs
          </testGroovyDocOutputDirectory>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <useModulePath>false</useModulePath>
          <includes>
            <include>**/*Spec</include>
          </includes>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
